lesson 1, 2 and 3 commit

--- a/01_basic.html
+++ b/01_basic.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Implementing CSS</title>
-  <!-- Internal CSS -->
+  <!-- External CSS (prefered practice)-->
+  <link rel="stylesheet" href="css/styles.css">
   <style>
+    /* Internal CSS */
     h2 {
       color: green;
     }
